--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="circle"><img src="img/arrow.svg" alt=""></div>
+    <div class="circle"><img src="img/arrow.svg" alt=">"></div>
     <div id="openingRel">
         <div id="openingText"><div id="call"></div><div id="appearedText"></div></div>
     </div>
