--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="animElem1 navButtonsBlockBurgerButton" id="navButtonIcon"><img src="img/menu.svg" alt=""></div>
         </div>
         <div id="navButtonsBlock">
-            <div id="navClose"><img src="img/close.svg"></div>
+            <div id="navClose"><img src="img/close.svg" alt="X"></div>
             <a href="#">
                 <div class="navButton">home</div>
             </a>
@@ -66,13 +66,13 @@
                 <div class="animElem1" id="labelImg"><img src="img/logo.svg" alt=""></div>
             </div>
         </div>
-        <img id="scrollArrow" src="img/arrow.svg">
+        <img id="scrollArrow" src="img/arrow.svg" alt="scroll arrow">
         <div id="cscrollTicket-about"></div>
         <div id="DECORATE_aboutLine"></div>
         <div id="relSiteBlock2">
             <div id="photoBlock">
                 <div>
-                    <img id="photo" src="img/photo.png">
+                    <img id="photo" src="img/photo.png" alt="photo">
                     <div id="MEDIA_photo"></div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
             <div id="stackBlock">
                 <div id="stackHTML" class="stackElem">
                     <center>
-                        <img id="svg" src="img/html.svg">
+                        <img id="svg" src="img/html.svg" alt="HTML">
                         <h3>HTML</h3>
                         <contentStack>
                             HTML is the standard markup language for creating web pages and web applications. With
@@ -102,7 +102,7 @@
                 </div>
                 <div id="stackCSS" class="stackElem">
                     <center>
-                        <img src="img/css.svg">
+                        <img src="img/css.svg" alt="CSS">
                         <h3>CSS</h3>
                         <contentStack>
                             CSS is a style sheet language used for describing the look and formatting of a document
@@ -113,7 +113,7 @@
                 </div>
                 <div id="stackJS" class="stackElem">
                     <center>
-                        <img src="img/js.svg">
+                        <img src="img/js.svg" alt="JavaScript">
                         <h3>Java script</h3>
                         <contentStack>
                             JavaScript is a programming language that enables you to create dynamically updating
@@ -125,7 +125,7 @@
                 </div>
                 <div id="stackPHP" class="stackElem">
                     <center>
-                        <img src="img/php.svg">
+                        <img src="img/php.svg" alt="PHP">
                         <h3>PHP</h3>
                         <contentStack>
                             PHP is a server-side scripting language that is widely used to create dynamic web pages.
@@ -136,7 +136,7 @@
                 </div>
                 <div id="stackSQL" class="stackElem">
                     <center>
-                        <img src="img/sql.svg">
+                        <img src="img/sql.svg" alt="SQL">
                         <h3>SQL</h3>
                         <contentStack>
                             SQL is a relational database management system (RDBMS) that uses SQL queries to retrieve and
@@ -147,7 +147,7 @@
                 </div>
                 <div id="stackBootstrap" class="stackElem">
                     <center>
-                        <img src="img/bootstrap.svg">
+                        <img src="img/bootstrap.svg" alt="Bootstrap">
                         <h3>bootstrap</h3>
                         <contentStack>
                             Bootstrap is a free and open-source front-end framework for designing websites and web
@@ -159,7 +159,7 @@
                 </div>
                 <div id="stackFigma" class="stackElem">
                     <center>
-                        <img src="img/figma.svg">
+                        <img src="img/figma.svg" alt="Figma">
                         <h3>figma</h3>
                         <contentStack>
                             Figma is a user-friendly design tool that enables anyone to create and share interactive
@@ -171,7 +171,7 @@
                 </div>
                 <div id="stackPhotoshop" class="stackElem">
                     <center>
-                        <img src="img/photoshop.svg">
+                        <img src="img/photoshop.svg" alt="Photoshop">
                         <h3>photoshop</h3>
                         <contentStack>
                             Photoshop is a raster graphics editor developed by Adobe Systems, which is used for
@@ -183,7 +183,7 @@
                 </div>
                 <div id="stackBlender" class="stackElem">
                     <center>
-                        <img src="img/blender.svg">
+                        <img src="img/blender.svg" alt="Blender">
                         <h3>blender</h3>
                         <contentStack>
                             Blender is a free and open-source 3D computer graphics software for creating, editing, and
@@ -195,7 +195,7 @@
                 </div>
                 <div id="stackPhotographing" class="stackElem">
                     <center>
-                        <img src="img/photoCamera.svg">
+                        <img src="img/photoCamera.svg" alt="Photographing">
                         <h3>Photographing</h3>
                         <contentStack>
                             Photography is the process of capturing images using a camera or other photographic
