add nav on mobile

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
                 <div class="animElem1" id="logo">TOXON</div>
             </a>
             <div class="animElem1 navButtonsBlockBurgerButton" id="navButtonText">navigation</div>
-            <div class="animElem1 navButtonsBlockBurgerButton" id="navButtonIcon"><img src="img/menu.svg" alt=""></div>
+            <div id="navButtonIcon" class="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
+        <div id="mediaBurgerBlock"></div>
         <div id="navButtonsBlock">
             <div id="navClose"><img src="img/close.svg" alt="X"></div>
             <a href="#">
