fix navs button on media

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="animElem1" id="logo">TOXON</div>
             </a>
             <div class="animElem1 navButtonsBlockBurgerButton" id="navButtonText">navigation</div>
-            <div id="navButtonIcon" class="burger">
+            <div id="navButtonIcon" class="burger animElem1">
                 <span></span>
                 <span></span>
                 <span></span>
