redesign fix bug with media / projects nav button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="navButton">stack</div>
             </a>
             <a href="#relSiteBlock4">
-                <div class="navButton">projects</div>
+                <div id="mediaDestroy_navButton" class="navButton">projects</div>
             </a>
             <a href="#footer">
                 <div class="navButton">contacts</div>
